# dist_calc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  common.h  docker-compose.yaml  m.cpp  set_iptables.sh  task.h  task_manager.cpp  task_manager.h  w.cpp  worker.h  worker_manager.cpp  worker_manager.h
